--- a/css prueba 1-Fotografia/index.html
+++ b/css prueba 1-Fotografia/index.html
@@ -7,22 +7,42 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div id="header">
-		<div class="nombre_pag">Comenzando con la fotografía</div>
-		<ul id="menu">
-			<li><a href="index.html" class="actual">Inicio</a></li>
-			<li><a href="paisajes.html">Paisajes</a></li>
-			<li><a href="retratos.html">Retratos</a></li>
-		</ul>
-	</div>
-	<div id="container_img">
-		<img src="imgs/sec.jpg">
-	</div>
-	<div id="container_sec">
-		<img class="img_izquierda" src="imgs/central.jpg">
-		<img class="img_derecha" src="imgs/central.jpg">
-	</div>
+	<div id="contenido">
+		<div id="header">
+			<div class="nombre_pag">Comenzando con la fotografía</div>
+			<ul id="menu">
+				<li><a href="index.html" class="actual">Inicio</a></li>
+				<li><a href="paisajes.html">Paisajes</a></li>
+				<li><a href="retratos.html">Retratos</a></li>
+			</ul>
+		</div>
+		<div id="container_img">
+			<img src="imgs/sec.jpg">
+		</div>
+		<div id="container_sec">
+			<img class="img_izquierda" src="imgs/central.jpg">
+			<a href="paisajes.html">Paisajes</a>
+			<img class="img_derecha" src="imgs/central.jpg">
+			<a href="retratos.html">Retratos</a>
+		</div>
 
-
+		<div id="footer">
+			<div class="col_footer">
+				<h1>Contacto</h1>
+				<div>branko-06@hotmail.com</div>
+				<div>0291-154431856</div>
+				<div>San Martin 780, Bahia Blanca</div>
+			</div>
+			<div class="col_footer">
+				<h1>Términos</h1>
+			</div>
+			<div class="col_footer">
+				<h1>Redes Sociales</h1>
+			</div>
+			<div class="col_footer">
+				<h1>Derechos</h1>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
