--- a/Responsive/css prueba 1-Fotografia/index.html
+++ b/Responsive/css prueba 1-Fotografia/index.html
@@ -20,10 +20,14 @@
 			<img src="imgs/sec.jpg">
 		</div>
 		<div id="container_sec">
-			<img class="img_izquierda" src="imgs/central.jpg">
-			<a href="paisajes.html">Paisajes</a>
-			<img class="img_derecha" src="imgs/central.jpg">
-			<a href="retratos.html">Retratos</a>
+			<div>
+				<img class="img_izquierda" src="imgs/central.jpg">
+				<a href="paisajes.html">Paisajes</a>
+			</div>
+			<div>
+				<img class="img_derecha" src="imgs/central.jpg">
+				<a href="retratos.html">Retratos</a>
+			</div>
 		</div>
 
 		<div id="footer">
@@ -35,12 +39,17 @@
 			</div>
 			<div class="col_footer">
 				<h1>Términos</h1>
+				<div>Este sitio posee términos y condiciones asociados con la empresa</div>
 			</div>
-			<div class="col_footer">
+			<div class="col_footer redes">
 				<h1>Redes Sociales</h1>
+				<div><img src="imgs/facebook.png" class="red_social"> Branko Ottavianelli</div>
+				<div><img src="imgs/instagram.png" class="red_social"> Branko.ott</div>
+				<div><img src="imgs/twitter.png" class="red_social"> Branko Ottavianelli</div>
 			</div>
 			<div class="col_footer">
 				<h1>Derechos</h1>
+				<div>Branko Ottavianelli © 2019</div>
 			</div>
 		</div>
 	</div>
