--- a/Javascript/Evaluacion 1/index.html
+++ b/Javascript/Evaluacion 1/index.html
@@ -1,1 +1,74 @@
-html
+<!DOCTYPE html>
+<html>
+<head>
+	<title>JSON</title>
+</head>
+<body>
+
+<button type="button" onclick="mostrar_todos()" id="btn_mostrar_todos">Mostrar Todos</button>
+<button type="button" onclick="promedio()" id="btn_promedio">Promedio</button>
+<button type="button" onclick="mayor_nota()" id="btn_mayor_nota">Mayor Nota</button>
+<button type="button" onclick="menor_nota()" id="btn_menor_nota">Menor Nota</button>
+
+<div id="resultado" style="margin-top: 2rem;">
+	
+</div>
+
+<script type="text/javascript">
+	var json={
+		estudiantes:[
+			{codigo:'001',nombre:'Pedro',nota:8},
+			{codigo:'002',nombre:'Matias',nota:6},
+			{codigo:'003',nombre:'Nahuel',nota:5},
+			{codigo:'004',nombre:'Gonzalo',nota:2},
+			{codigo:'005',nombre:'Eduardo',nota:9},
+			{codigo:'006',nombre:'Santiago',nota:10},
+			{codigo:'007',nombre:'Lucas',nota:2},
+			{codigo:'008',nombre:'Nicolas',nota:3},
+			{codigo:'009',nombre:'Patricio',nota:8},
+			{codigo:'0010',nombre:'Alejandro',nota:7}
+		]
+	};
+	var resultado=document.getElementById('resultado');
+	function mostrar_todos(){
+		resultado.innerHTML="";
+		for (var i = 0 ; i < json.estudiantes.length; i++) {
+			resultado.innerHTML+="Codigo: "+json.estudiantes[i].codigo+ "<br>";
+			resultado.innerHTML+="Nombre: "+json.estudiantes[i].nombre+ "<br>";
+			resultado.innerHTML+="Nota: "+json.estudiantes[i].nota+ "<br>";
+			resultado.innerHTML+="----------------------------- <br>";
+		}
+	}
+
+	function promedio(){
+		var notas=0;
+		for (var i = 0 ; i < json.estudiantes.length; i++) {
+			notas=notas+json.estudiantes[i].nota;
+		}
+		var promedio= notas/10;
+		resultado.innerHTML="La nota promedio es: "+promedio;
+	}
+
+	function mayor_nota(){
+		var nota_mayor=0;
+		for (var i = 0 ; i < json.estudiantes.length; i++) {
+			if (nota_mayor < json.estudiantes[i].nota) {
+				nota_mayor=json.estudiantes[i].nota;
+			}
+		}
+		resultado.innerHTML="La mayor nota es: "+nota_mayor;
+	}
+
+	function menor_nota(){
+		var nota_menor=10;
+		for (var i = 0 ; i < json.estudiantes.length; i++) {
+			if (nota_menor > json.estudiantes[i].nota) {
+				nota_menor=json.estudiantes[i].nota;
+			}
+		}
+		resultado.innerHTML="La menor nota es: "+nota_menor;
+	}
+
+</script>
+</body>
+</html>
