--- a/Javascript/Evaluacion 1/index.html
+++ b/Javascript/Evaluacion 1/index.html
@@ -15,35 +15,33 @@
 </div>
 
 <script type="text/javascript">
-	var json={
-		estudiantes:[
-			{codigo:'001',nombre:'Pedro',nota:8},
-			{codigo:'002',nombre:'Matias',nota:6},
-			{codigo:'003',nombre:'Nahuel',nota:5},
-			{codigo:'004',nombre:'Gonzalo',nota:2},
-			{codigo:'005',nombre:'Eduardo',nota:9},
-			{codigo:'006',nombre:'Santiago',nota:10},
-			{codigo:'007',nombre:'Lucas',nota:2},
-			{codigo:'008',nombre:'Nicolas',nota:3},
-			{codigo:'009',nombre:'Patricio',nota:8},
-			{codigo:'0010',nombre:'Alejandro',nota:7}
-		]
-	};
+	var estudiantes=[
+			{"codigo":"001","nombre":"Pedro","nota":"8"},
+			{"codigo":"002","nombre":"Matias","nota":"6"},
+			{"codigo":"003","nombre":"Nahuel","nota":"5"},
+			{"codigo":"004","nombre":"Gonzalo","nota":"2"},
+			{"codigo":"005","nombre":"Eduardo","nota":"9"},
+			{"codigo":"006","nombre":"Santiago","nota":"10"},
+			{"codigo":"007","nombre":"Lucas","nota":"2"},
+			{"codigo":"008","nombre":"Nicolas","nota":"3"},
+			{"codigo":"009","nombre":"Patricio","nota":"8"},
+			{"codigo":"0010","nombre":"Alejandro","nota":"7"}
+		];
 	var resultado=document.getElementById('resultado');
 	function mostrar_todos(){
 		resultado.innerHTML="";
-		for (var i = 0 ; i < json.estudiantes.length; i++) {
-			resultado.innerHTML+="Codigo: "+json.estudiantes[i].codigo+ "<br>";
-			resultado.innerHTML+="Nombre: "+json.estudiantes[i].nombre+ "<br>";
-			resultado.innerHTML+="Nota: "+json.estudiantes[i].nota+ "<br>";
+		for (var i = 0 ; i < estudiantes.length; i++) {
+			resultado.innerHTML+="Codigo: "+estudiantes[i].codigo+ "<br>";
+			resultado.innerHTML+="Nombre: "+estudiantes[i].nombre+ "<br>";
+			resultado.innerHTML+="Nota: "+estudiantes[i].nota+ "<br>";
 			resultado.innerHTML+="----------------------------- <br>";
 		}
 	}
 
 	function promedio(){
 		var notas=0;
-		for (var i = 0 ; i < json.estudiantes.length; i++) {
-			notas=notas+json.estudiantes[i].nota;
+		for (var i = 0 ; i < estudiantes.length; i++) {
+			notas=notas+estudiantes[i].nota;
 		}
 		var promedio= notas/10;
 		resultado.innerHTML="La nota promedio es: "+promedio;
@@ -51,9 +49,9 @@
 
 	function mayor_nota(){
 		var nota_mayor=0;
-		for (var i = 0 ; i < json.estudiantes.length; i++) {
-			if (nota_mayor < json.estudiantes[i].nota) {
-				nota_mayor=json.estudiantes[i].nota;
+		for (var i = 0 ; i < estudiantes.length; i++) {
+			if (nota_mayor < estudiantes[i].nota) {
+				nota_mayor=estudiantes[i].nota;
 			}
 		}
 		resultado.innerHTML="La mayor nota es: "+nota_mayor;
@@ -61,9 +59,9 @@
 
 	function menor_nota(){
 		var nota_menor=10;
-		for (var i = 0 ; i < json.estudiantes.length; i++) {
-			if (nota_menor > json.estudiantes[i].nota) {
-				nota_menor=json.estudiantes[i].nota;
+		for (var i = 0 ; i < estudiantes.length; i++) {
+			if (nota_menor > estudiantes[i].nota) {
+				nota_menor=estudiantes[i].nota;
 			}
 		}
 		resultado.innerHTML="La menor nota es: "+nota_menor;
