--- a/big data/evaluacion 2 backend/BigData_Branko_Ottavianelli/evaluacion 2 PHP/index.html
+++ b/big data/evaluacion 2 backend/BigData_Branko_Ottavianelli/evaluacion 2 PHP/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <video src="video/video.mp4" muted="muted" id="vidFondo"></video>
+  <video src="img/video.mp4" muted="muted" id="vidFondo"></video>
 
   <div class="contenedor">
     <div class="card rowTitulo">
